--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,6 +1,11 @@
 name: CMake
 
-on: [push]
+on:
+  push:
+    branches:
+      - snapshot
+    tags:
+      - v*
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
